--- a/Choreography_Dev/src/choreography/view/colorPalette/ColorPalette.fxml
+++ b/Choreography_Dev/src/choreography/view/colorPalette/ColorPalette.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.paint.*?>
 <?import java.lang.*?>
 <?import javafx.geometry.*?>
 <?import javafx.scene.control.*?>
@@ -8,13 +9,53 @@
 <?import javafx.scene.shape.*?>
 <?scenebuilder-stylesheet ../application.css?>
 
-<HBox fx:id="colorPalette" alignment="CENTER_RIGHT" maxHeight="-Infinity" maxWidth="-1.0" minHeight="-Infinity" prefHeight="29.0" prefWidth="-1.0" spacing="2.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/2.2" fx:controller="choreography.view.colorPalette.ColorPaletteController">
-  <children>
-    <ColorPicker fx:id="colorPicker" editable="true" minWidth="-Infinity" HBox.hgrow="ALWAYS" />
-    <Button fx:id="addRec" mnemonicParsing="false" text="+" textAlignment="CENTER" />
-    <Button fx:id="changeButton" mnemonicParsing="false" text="Change" />
-  </children>
-  <padding>
-    <Insets bottom="2.0" left="2.0" right="2.0" top="2.0" />
-  </padding>
-</HBox>
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="choreography.view.colorPalette.ColorPaletteController">
+   <children>
+      <HBox fx:id="defaultColorsBox" layoutX="7.0" layoutY="5.0" spacing="2.0">
+         <children>
+            <Rectangle fx:id="rectangle_OFF" arcHeight="5.0" arcWidth="5.0" height="25.0" stroke="BLACK" strokeType="INSIDE" width="25.0" />
+            <Rectangle fx:id="rectangle_WHITE" arcHeight="5.0" arcWidth="5.0" fill="WHITE" height="25.0" stroke="BLACK" strokeType="INSIDE" width="25.0" />
+            <Rectangle fx:id="rectangle_LIGHT_RED" arcHeight="5.0" arcWidth="5.0" fill="#ff0037" height="25.0" stroke="BLACK" strokeType="INSIDE" width="25.0" />
+            <Rectangle fx:id="rectangle_RED" arcHeight="5.0" arcWidth="5.0" fill="RED" height="25.0" stroke="BLACK" strokeType="INSIDE" width="25.0" />
+            <Rectangle fx:id="rectangle_LIGHT_ORANGE" arcHeight="5.0" arcWidth="5.0" fill="#ff3205" height="25.0" stroke="BLACK" strokeType="INSIDE" width="25.0" />
+            <Rectangle fx:id="rectangle_ORANGE" arcHeight="5.0" arcWidth="5.0" fill="#ff1900" height="25.0" stroke="BLACK" strokeType="INSIDE" width="25.0" />
+            <Rectangle fx:id="rectangle_LIGHT_YELLOW" arcHeight="5.0" arcWidth="5.0" fill="#ffff08" height="25.0" stroke="BLACK" strokeType="INSIDE" width="25.0" />
+            <Rectangle fx:id="rectangle_YELLOW" arcHeight="5.0" arcWidth="5.0" fill="#ffc800" height="25.0" stroke="BLACK" strokeType="INSIDE" width="25.0" />
+            <Rectangle fx:id="rectangle_LIGHT_GREEN" arcHeight="5.0" arcWidth="5.0" fill="#3bff00" height="25.0" stroke="BLACK" strokeType="INSIDE" width="25.0" />
+            <Rectangle fx:id="rectangle_GREEN" arcHeight="5.0" arcWidth="5.0" fill="#00f000" height="25.0" stroke="BLACK" strokeType="INSIDE" width="25.0" />
+            <Rectangle fx:id="rectangle_LIGHT_BLUE" arcHeight="5.0" arcWidth="5.0" fill="AQUA" height="25.0" stroke="BLACK" strokeType="INSIDE" width="25.0" />
+            <Rectangle fx:id="rectangle_CYAN" arcHeight="5.0" arcWidth="5.0" fill="#0096ef" height="25.0" stroke="BLACK" strokeType="INSIDE" width="25.0" />
+            <Rectangle fx:id="rectangle_BLUE" arcHeight="5.0" arcWidth="5.0" fill="BLUE" height="25.0" stroke="BLACK" strokeType="INSIDE" width="25.0" />
+            <Rectangle fx:id="rectangle_VIOLET" arcHeight="5.0" arcWidth="5.0" fill="#3b11ff" height="25.0" stroke="BLACK" strokeType="INSIDE" width="25.0" />
+            <Rectangle fx:id="rectangle_LIGHT_VIOLET" arcHeight="5.0" arcWidth="5.0" fill="#9646ff" height="25.0" stroke="BLACK" strokeType="INSIDE" width="25.0" />
+            <Rectangle fx:id="rectangle_MAGENTA" arcHeight="5.0" arcWidth="5.0" fill="#d100c5" height="25.0" stroke="BLACK" strokeType="INSIDE" width="25.0" />
+         </children>
+         <padding>
+            <Insets bottom="2.0" left="2.0" right="2.0" top="2.0" />
+         </padding>
+      </HBox>
+      <HBox fx:id="customColorsBox" layoutX="7.0" layoutY="30.0" spacing="2.0">
+         <children>
+            <Rectangle fx:id="custom1" arcHeight="5.0" arcWidth="5.0" fill="WHITE" height="25.0" stroke="BLACK" strokeType="INSIDE" width="25.0" />
+            <Rectangle fx:id="custom2" arcHeight="5.0" arcWidth="5.0" fill="WHITE" height="25.0" stroke="BLACK" strokeType="INSIDE" width="25.0" />
+            <Rectangle fx:id="custom3" arcHeight="5.0" arcWidth="5.0" fill="WHITE" height="25.0" stroke="BLACK" strokeType="INSIDE" width="25.0" />
+            <Rectangle fx:id="custom4" arcHeight="5.0" arcWidth="5.0" fill="WHITE" height="25.0" stroke="BLACK" strokeType="INSIDE" width="25.0" />
+            <Rectangle fx:id="custom5" arcHeight="5.0" arcWidth="5.0" fill="WHITE" height="25.0" stroke="BLACK" strokeType="INSIDE" width="25.0" />
+            <Rectangle fx:id="custom6" arcHeight="5.0" arcWidth="5.0" fill="WHITE" height="25.0" stroke="BLACK" strokeType="INSIDE" width="25.0" />
+            <Rectangle fx:id="custom7" arcHeight="5.0" arcWidth="5.0" fill="WHITE" height="25.0" stroke="BLACK" strokeType="INSIDE" width="25.0" />
+            <Rectangle fx:id="custom8" arcHeight="5.0" arcWidth="5.0" fill="WHITE" height="25.0" stroke="BLACK" strokeType="INSIDE" width="25.0" />
+            <Rectangle fx:id="custom9" arcHeight="5.0" arcWidth="5.0" fill="WHITE" height="25.0" stroke="BLACK" strokeType="INSIDE" width="25.0" />
+            <Rectangle fx:id="custom10" arcHeight="5.0" arcWidth="5.0" fill="WHITE" height="25.0" stroke="BLACK" strokeType="INSIDE" width="25.0" />
+            <Rectangle fx:id="custom11" arcHeight="5.0" arcWidth="5.0" fill="WHITE" height="25.0" stroke="BLACK" strokeType="INSIDE" width="25.0" />
+            <Rectangle fx:id="custom12" arcHeight="5.0" arcWidth="5.0" fill="WHITE" height="25.0" stroke="BLACK" strokeType="INSIDE" width="25.0" />
+            <Rectangle fx:id="custom13" arcHeight="5.0" arcWidth="5.0" fill="WHITE" height="25.0" stroke="BLACK" strokeType="INSIDE" width="25.0" />
+            <Rectangle fx:id="custom14" arcHeight="5.0" arcWidth="5.0" fill="WHITE" height="25.0" stroke="BLACK" strokeType="INSIDE" width="25.0" />
+            <Rectangle fx:id="custom15" arcHeight="5.0" arcWidth="5.0" fill="WHITE" height="25.0" stroke="BLACK" strokeType="INSIDE" width="25.0" />
+            <Rectangle fx:id="custom16" arcHeight="5.0" arcWidth="5.0" fill="WHITE" height="25.0" stroke="BLACK" strokeType="INSIDE" width="25.0" />
+         </children>
+         <padding>
+            <Insets bottom="2.0" left="2.0" right="2.0" top="4.0" />
+         </padding>
+      </HBox>
+   </children>
+</Pane>
