--- a/Choreography_Dev/src/choreography/view/specialOperations/Specialoperations.fxml
+++ b/Choreography_Dev/src/choreography/view/specialOperations/Specialoperations.fxml
@@ -8,7 +8,7 @@
 <?import javafx.scene.text.*?>
 <?scenebuilder-stylesheet ../application.css?>
 
-<Accordion prefHeight="157.0" prefWidth="233.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="choreography.view.specialOperations.SpecialoperationsController">
+<Accordion fx:id="specialOpsPane" prefHeight="157.0" prefWidth="233.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="choreography.view.specialOperations.SpecialoperationsController">
   <panes>
     <TitledPane fx:id="sweepControlsPane" animated="true" text="Sweep Controls">
       <content>
@@ -23,8 +23,8 @@
 <Font size="9.0" />
 </font>
 </Label>
-<Label layoutX="10.0" text="A:" />
-<Label layoutX="10.0" layoutY="35.0" text="B:" />
+<Label layoutX="10.0" text="L:" />
+<Label layoutX="10.0" layoutY="35.0" text="R:" />
 <Group>
 <children>
 <ToggleButton fx:id="independentSweeps" layoutX="135.0" layoutY="64.0" mnemonicParsing="false" prefHeight="21.0" prefWidth="31.0" text="...">
@@ -68,7 +68,7 @@
 </bumpInput>
 </Lighting>
 </effect>
-</Group><Button fx:id="fadeUpButton" layoutX="10.0" layoutY="40.0" mnemonicParsing="false" text="Fade ↑" /><Button fx:id="fadeDownButton" layoutX="78.33837890625" layoutY="40.0" mnemonicParsing="false" text="Fade ↓" /><Button fx:id="strobeButton" layoutX="11.0" layoutY="73.0" mnemonicParsing="false" text="Strobe" /><Button fx:id="resetButton" layoutX="10.83837890625" layoutY="8.5" mnemonicParsing="false" text="Reset All" /><Button fx:id="deleteButton" layoutX="88.83837890625" layoutY="8.5" mnemonicParsing="false" text="Delete" /><CheckBox fx:id="voiceCheckbox" layoutX="154.0" layoutY="13.0" mnemonicParsing="false" text="Voice" /><ComboBox fx:id="strobeFrequency" layoutX="79.0" layoutY="73.0" prefHeight="26.0" prefWidth="65.0" /><Label layoutX="149.353271484375" layoutY="81.0" text="Hz" />
+</Group><Button fx:id="fadeUpButton" disable="true" layoutX="10.0" layoutY="40.0" mnemonicParsing="false" text="Fade ↑" visible="false" /><Button fx:id="fadeDownButton" disable="true" layoutX="78.33837890625" layoutY="40.0" mnemonicParsing="false" text="Fade ↓" visible="false" /><Button fx:id="strobeButton" disable="true" layoutX="11.0" layoutY="73.0" mnemonicParsing="false" text="Strobe" visible="false" /><Button fx:id="resetButton" layoutX="10.83837890625" layoutY="8.5" mnemonicParsing="false" text="Reset All" /><Button fx:id="deleteButton" layoutX="88.83837890625" layoutY="8.5" mnemonicParsing="false" text="Delete" /><CheckBox fx:id="voiceCheckbox" layoutX="154.0" layoutY="13.0" mnemonicParsing="false" text="Voice" /><ComboBox fx:id="strobeFrequency" disable="true" layoutX="79.0" layoutY="73.0" prefHeight="26.0" prefWidth="65.0" visible="false" /><Label layoutX="149.353271484375" layoutY="81.0" text="Hz" visible="false" />
 </children></AnchorPane>
   </content>
 </TitledPane>
